--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,3 +28,17 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
+    - name: 📂 Deploy to AWS Cloud
+      uses: wlixcc/SFTP-Deploy-Action@v1.2.4
+      with:
+        sftpArgs: '-o ConnectTimeout=5'
+        server: ${{ secrets.FTP_SERVER }}
+        username: ${{ secrets.FTP_USERNAME }}
+        password: ${{ secrets.FTP_PASSWORD }}
+        remote_path: '/var/www/backend'
+        sftp_only: true
+        
+
+
+   
+             
