--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,42 +1,25 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Node.js CI
-
-on:
+on: 
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
+   branches:
+    - main
+name: 🚀 Deploy Backend on AWS
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x, 22.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - name: 📂 Deploy to AWS Cloud
-      uses: wlixcc/SFTP-Deploy-Action@v1.2.4
-      with:
-        sftpArgs: '-o ConnectTimeout=5'
-        server: ${{ secrets.FTP_SERVER }}
-        username: ${{ secrets.FTP_USERNAME }}
-        password: ${{ secrets.FTP_PASSWORD }}
-        remote_path: '/var/www/backend'
-        sftp_only: true
+      web-deploy:
+        name: 🎉 Deploy Back-End School Management System
+        runs-on: ubuntu-latest
+        steps:
+          - name: 🚚 Get Lastest Production Source Code
+            uses: actions/checkout@v2
+          - name: 📂 Deploy to AWS Cloud
+            uses: wlixcc/SFTP-Deploy-Action@v1.2.4
+            with:
+              sftpArgs: '-o ConnectTimeout=5'
+              server: ${{ secrets.FTP_SERVER }}
+              username: ${{ secrets.FTP_USERNAME }}
+              password: ${{ secrets.FTP_PASSWORD }}
+              remote_path: '/var/www/backend'
+              sftp_only: true
+              local_patj: './'
         
 
 
