--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,15 +2,21 @@ on:
   push:
    branches:
     - main
-name: 🚀 Deploy Backend on AWS
+name: 🚀 Deploy REST API
 jobs:
       web-deploy:
-        name: 🎉 Deploy Back-End School Management System
+        name: 🎉 Deploy REST API
         runs-on: ubuntu-latest
+        strategy:
+          matrix:
+            node-version: [18.x, 20.x, 22.x]
         steps:
-          - name: 🚚 Get Lastest Production Source Code
-            uses: actions/checkout@v2
-          - name: 📂 Deploy to AWS Cloud
+          - name: Use Node.js ${{ matrix.node-version }}
+            uses: actions/setup-node@v4
+            with:
+                node-version: ${{ matrix.node-version }}
+                cache: 'npm'
+          - name: 📂 Deploy to Cloud
             uses: wlixcc/SFTP-Deploy-Action@v1.2.4
             with:
               sftpArgs: '-o ConnectTimeout=5'
